# ADBUtil

./: AdbUtils.spec  AppManageInterface.py  FileInterface.py  FileInterface_ui.py  README.md  ScrcpyInterface.py  ToolsInterface.py  appmanager.py  appmanager.ui  appmanager_ui.py  config.py  globals.py  main.py  main_scrcpy.py  main_scrcpy.ui  pyproject.toml  resources.qrc  resources_rc.py  toolbar.py  tools.py  tools.ui  untitled.py  untitled.ui
FileManage/: fileInterface.ui  untitled.ui
FileManage/app/core/: configurations.py  main.py  managers.py
FileManage/app/data/: models.py
FileManage/app/data/repositories/: __init__.py  android_adb.py  python_adb.py
FileManage/app/gui/: help.py  notification.py
FileManage/app/gui/explorer/: devices.py  files.py  toolbar.py
FileManage/app/helpers/: converters.py  tools.py
FileManage/app/services/: adb.py
FileManage/core/: configurations.py  main.py  managers.py
FileManage/data/repositories/: __init__.py  android_adb.py  python_adb.py
FileManage/helpers/: converters.py  tools.py
FileManage/services/: adb.py
resources/: ADB_Box使用指南.docx
